# chess

./: .gitignore  CMakeLists.txt  README.md
src/CPP/: AttackTabels.cpp  Board.cpp  BoardPrinter.cpp  BoardView.cpp  Color.cpp  GameFigure.cpp  GameState.cpp  Main.cpp  Move.cpp  MovmentLogic.cpp
src/Header/: AttackTabels.h  Board.h  BoardPrinter.h  BoardView.h  CachedThreats.h  Color.h  Constants.h  FigureTypes.h  GameFigure.h  GameState.h  Move.h  MoveResult.h  MoveType.h  MovementLogic.h  MovementTypes.h
src/utilities/: deafult_positions.json  test_capture.json  test_casteling.json  test_check1.json  test_check2.json  test_enPassant.json  test_minimal.json  test_pinning.json  test_promoting.json
